--- a/src/main/resources/MeetingMenu.fxml
+++ b/src/main/resources/MeetingMenu.fxml
@@ -13,6 +13,8 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
@@ -32,8 +34,8 @@
                <children>
                   <TableView>
                     <columns>
-                      <TableColumn fx:id="tbColDate" prefWidth="75.0" text="Date" />
-                      <TableColumn fx:id="tbColSubject" prefWidth="75.0" text="Subject" />
+                      <TableColumn fx:id="tbColDate" minWidth="80.0" prefWidth="100.0" text="Date" />
+                      <TableColumn fx:id="tbColSubject" minWidth="100.0" prefWidth="120.0" text="Subject" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -63,53 +65,30 @@
       </AnchorPane>
     <AnchorPane minWidth="350.0">
          <children>
-            <GridPane layoutX="10.0" layoutY="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" percentHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" percentHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" percentHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <VBox layoutX="30.0" layoutY="-40.0" spacing="10.0" style="-fx-background-color: #fff; -fx-background-radius: 5;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label text="Details">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Button fx:id="btnDeleteMeeting" maxWidth="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#deleteMeeting" text="Delete Meeting" GridPane.columnIndex="1">
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <graphic>
-                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@baseline_delete_black_18dp.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Label text="Date:" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblDate" text="dd/mm/yyyy" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label text="Turn:" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblTurn" text="hh:mm" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label text="Message:" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <ScrollPane fitToWidth="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <TilePane hgap="10.0" prefColumns="4" prefRows="2" vgap="10.0">
+                     <children>
+                        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Date:">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblDate" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="dd/mm/yyyy" />
+                        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Turn:">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblTurn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="hh:mm" />
+                        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Message:">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </TilePane>
+                  <ScrollPane fitToWidth="true" minHeight="255.0">
                      <content>
                         <TextFlow textAlignment="JUSTIFY">
                            <children>
@@ -122,7 +101,22 @@
                      </content>
                   </ScrollPane>
                </children>
-            </GridPane>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <Button fx:id="btnDeleteMeeting" maxWidth="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#deleteMeeting" text="Delete Meeting" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@baseline_delete_black_18dp.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
