--- a/src/main/resources/MeetingMenu.fxml
+++ b/src/main/resources/MeetingMenu.fxml
@@ -3,25 +3,22 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<SplitPane fx:id="root" dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.control.gui.MeetingMenuGuiControl">
+<SplitPane fx:id="root" dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.control.gui.ManageMeetingFxControl">
   <items>
-    <AnchorPane maxWidth="500.0" minWidth="200.0">
+    <AnchorPane minWidth="200.0">
          <children>
             <GridPane vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
@@ -32,29 +29,25 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView>
+                  <TableView fx:id="tvMeetingTable">
                     <columns>
                       <TableColumn fx:id="tbColDate" minWidth="80.0" prefWidth="100.0" text="Date" />
-                      <TableColumn fx:id="tbColSubject" minWidth="100.0" prefWidth="120.0" text="Subject" />
+                      <TableColumn fx:id="tbColSurname" minWidth="100.0" prefWidth="120.0" text="Subject" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button fx:id="btnNewMeeting" maxWidth="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#newMeeting" text="New Meeting" GridPane.rowIndex="1">
+                  <Button fx:id="btnNewMeeting" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#bookMeeting" text="Book Meeting" GridPane.rowIndex="1">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                     <graphic>
-                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@baseline_add_circle_outline_black_18dp.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
+                     <graphic>
+                        <SVGPath content="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z" />
+                     </graphic>
                   </Button>
                </children>
                <padding>
@@ -65,58 +58,45 @@
       </AnchorPane>
     <AnchorPane minWidth="350.0">
          <children>
-            <VBox layoutX="30.0" layoutY="-40.0" spacing="10.0" style="-fx-background-color: #fff; -fx-background-radius: 5;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane layoutX="10.0" layoutY="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" percentHeight="90.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <TilePane hgap="10.0" prefColumns="4" prefRows="2" vgap="10.0">
+                  <VBox spacing="10.0" style="-fx-background-color: #fff; -fx-background-radius: 5;">
                      <children>
-                        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Date:">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lblDate" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="dd/mm/yyyy" />
-                        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Turn:">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lblTurn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="hh:mm" />
                         <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Message:">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                     </children>
-                  </TilePane>
-                  <ScrollPane fitToWidth="true" minHeight="255.0">
-                     <content>
                         <TextFlow textAlignment="JUSTIFY">
                            <children>
-                              <Text fx:id="txtMessage" strokeType="OUTSIDE" strokeWidth="0.0" text="No Message" />
+                              <Text fx:id="txtMessage" strokeType="OUTSIDE" strokeWidth="0.0" text="No meeting selected" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" />
                            </padding>
                         </TextFlow>
-                     </content>
-                  </ScrollPane>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <Button fx:id="btnDeleteMeeting" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#deleteMeeting" text="Delete Meeting" GridPane.rowIndex="1">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <graphic>
+                        <SVGPath content="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" />
+                     </graphic>
+                  </Button>
                </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </VBox>
-            <Button fx:id="btnDeleteMeeting" maxWidth="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#deleteMeeting" text="Delete Meeting" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <graphic>
-                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@baseline_delete_black_18dp.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            </GridPane>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
