--- a/src/main/resources/WeStudyScene.fxml
+++ b/src/main/resources/WeStudyScene.fxml
@@ -56,7 +56,7 @@
                       </Menu>
                         <Menu fx:id="menuItemQuestion" mnemonicParsing="false">
                            <graphic>
-                              <VBox fx:id="questionButton" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="35.0" onMouseClicked="#openQuestions" prefHeight="62.0" spacing="5.0">
+                              <VBox fx:id="questionButton" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="35.0" prefHeight="62.0" spacing="5.0">
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
@@ -73,7 +73,7 @@
                         </Menu>
                         <Menu fx:id="menuItemEvent" mnemonicParsing="false">
                            <graphic>
-                              <VBox fx:id="eventButton" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="35.0" onMouseClicked="#openEvents" prefHeight="62.0" spacing="5.0">
+                              <VBox fx:id="eventButton" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="35.0" prefHeight="62.0" spacing="5.0">
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
@@ -122,7 +122,7 @@
                               </VBox>
                            </graphic>
                            <items>
-                              <MenuItem mnemonicParsing="false" text="Exit" />
+                              <MenuItem mnemonicParsing="false" onAction="#logout" text="Exit" />
                            </items>
                         </Menu>
                     </menus>
